auto-test/tests/chapter_17/invalid_types/extra_credit/bitwise_void.c

int main(void) {
    int x = 10;
    int y = 11;
    x & (void) y;
    return 0;
}